<resources>
    <string name="app_name">MadhuProject</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_patient_list">PatientList</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_patient_verification">PatientVerification</string>
    <string name="clinic_name"> <u>XYZ Clinic(05/18/2015) 123 Main Street, Dallas TX 75231</u> </string>
    <string name="home"><u>Home</u></string>
    <string name="logout"><u>Logout</u></string>
    <string name="time"><u>6:54 pm</u></string>
    <string name="user"><u>Jason Mason</u></string>
    <string name="hint_first_name"><font size="13">Enter First Name</font></string>
    <string name="hint_last_name"><font size="13">Enter Last Name</font></string>
    <string name="hint_date"><font size="13">00/00/0000</font></string>
    <string name="search"><font size="13">Search</font></string>

</resources>


